// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListHeader renders the All list title 1`] = `
<div>
  <h1
    className="title all"
  >
    All Foods
  </h1>
  <div
    className="actions"
  >
    <form
      className="search"
      onSubmit={[Function]}
    >
      <label
        htmlFor="search"
      >
        Search
      </label>
      <input
        defaultValue="test"
        name="search"
        placeholder="Search"
        type="search"
      />
      <input
        type="submit"
        value="Search"
      />
    </form>
  </div>
</div>
`;

exports[`ListHeader renders the Very High list title 1`] = `
<div>
  <h1
    className="title very-high"
  >
    Very High Oxalates
  </h1>
  <div
    className="actions"
  >
    <form
      className="search"
      onSubmit={[Function]}
    >
      <label
        htmlFor="search"
      >
        Search
      </label>
      <input
        defaultValue="test"
        name="search"
        placeholder="Search"
        type="search"
      />
      <input
        type="submit"
        value="Search"
      />
    </form>
  </div>
</div>
`;
